--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/IOTServiceProvider
 spring.datasource.username=root
-spring.datasource.password=tellioglu
+spring.datasource.password=1burhan234
 spring.thymeleaf.cache= false
 spring.thymeleaf.cache: false
